default/freshrss/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss
  namespace: default
  annotations:
    flux.weave.works/tag.freshrss: glob:*-ls*
    flux.weave.works/automated: 'false'
spec:
  serviceName: freshrss
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      volumes:
      - name: config
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:freshrss-config
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: postgresql
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:freshrss-postgresql
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4

      containers:
      - name: freshrss
        image: linuxserver/freshrss:1.16.2-ls67
        volumeMounts:
        - name: config
          mountPath: /config
      - name: postgresql
        image: postgres:12.4
        volumeMounts:
        - name: postgresql
          mountPath: /var/lib/postgresql/data
