default/freshrss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: default
spec:
  selector:
    app: freshrss
  ports:
  - name: freshrss
    port: 80
