default/freshrss/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: freshrss
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-global-auth: "true"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
spec:
  tls:
    - hosts:
        - v.desertbluffs.com
  rules:
    - host: v.desertbluffs.com
      http:
        paths:
          - backend:
              serviceName: freshrss
              servicePort: 80
