default/freshrss/00networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: freshrss
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: freshrss
  ingress:
  - ports:
    - port: 80
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
